--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
-        <!-- Navigation-->  
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" style="max-height: 2rem;">
+        <!-- Navigation-->   
+        <!-- <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" >
             <div class="container">
-                <a class="navbar-brand" href="#page-top"><h2 style="padding-top: 1rem; padding-bottom:0.5rem;">Naman Rana</h2></a>
+                <a class="navbar-brand" href="#page-top"><h2>Naman Rana</h2></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -35,7 +35,26 @@
                     </ul>
                 </div>
             </div>
+        </nav> -->
+
+
+
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+            <div class="container px-4 px-lg-5"> 
+                <a class="navbar-brand" href="#page-top">Naman Rana</a>
+                <button style="color: white;" class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">Education</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#team">Experience</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
+         
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
